:hammer: Fixed text being too condensed on mobile view

--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -1,30 +1,14 @@
 .container--about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     section:nth-child(1),
     section:nth-child(2)
     {
-        margin: 3rem;
-    
-        .list__heading {
-            text-align: center;
-            margin-bottom: 2rem;
-            font-size: 32px;
-            color: colour(primary);
-            font-weight: weight(regular);
-        }
-
-        .list__subheading {
-            margin: 2rem 0 1rem 0;
-            font-size: 24px;
-            color: colour(secondary);
-            font-weight: weight(regular);
-            padding-top: 1.8rem;
-            border-top: 2px solid colour(secondary);
-        }
-    
         .list {
+            width: 100%;
             max-width: 600px;
-            padding: 0 2rem;
-            margin: 0 auto;
     
             &__item {
                 font-size: 14px;
@@ -43,5 +27,22 @@
                 color: colour(accent);
             }
         }
+
+        .list__heading {
+            text-align: center;
+            margin-bottom: 2rem;
+            font-size: 32px;
+            color: colour(primary);
+            font-weight: weight(regular);
+        }
+
+        .list__subheading {
+            margin: 2rem 0 1rem 0;
+            font-size: 24px;
+            color: colour(secondary);
+            font-weight: weight(regular);
+            padding-top: 1.8rem;
+            border-top: 2px solid colour(secondary);
+        }    
     }
 }
